Add subtask class, asset system singleton

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,11 +64,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Luncher.cs" />
+    <Compile Include="Assets\Script\AssetSystem.cs" />
     <Compile Include="Assets\Script\ConceptTask.cs" />
     <Compile Include="Assets\Script\Controller\AssetManager_Controller.cs" />
     <Compile Include="Assets\Script\Controller\ITasksController.cs" />
     <Compile Include="Assets\Script\Controller\ModelisationTask.cs" />
     <Compile Include="Assets\Script\Controller\PanelBoard_Controller.cs" />
+    <Compile Include="Assets\Script\Controller\Subtask_Controller.cs" />
     <Compile Include="Assets\Script\FileReader.cs" />
     <Compile Include="Assets\Script\Interfaces\IAssetManager_View.cs" />
     <Compile Include="Assets\Script\Interfaces\IConcept_View.cs" />
@@ -83,6 +85,7 @@
     <Compile Include="Assets\Script\View\Concept_View.cs" />
     <Compile Include="Assets\Script\View\Modelisation_View.cs" />
     <Compile Include="Assets\Script\View\PanelBoard_View.cs" />
+    <Compile Include="Assets\Script\View\Subtask_View.cs" />
     <Compile Include="Assets\Script\View\Task_View.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/2019.3.13f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
