Subtask saving and loading implemented. Subtask starting software implmented Pipelinesystem singleton implemented

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Script\Model\AssetManager_Model.cs" />
     <Compile Include="Assets\Script\Model\ModelisationTask_Model.cs" />
     <Compile Include="Assets\Script\Model\Subtask_Model.cs" />
+    <Compile Include="Assets\Script\PipelineSystem.cs" />
     <Compile Include="Assets\Script\UVTask.cs" />
     <Compile Include="Assets\Script\View\AssetManager_View.cs" />
     <Compile Include="Assets\Script\View\Concept_View.cs" />
